--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "jotilux.netlify.app"
+baseURL = "/"
 languageCode = "en"                                      # website language
 defaultContentLanguage = "en"                            # [en, zh, ...] determines which i18n file to use
 title = "Jotilux Testingpage"                                   # website title
